fix(ui): add right padding to commit col on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -118,9 +118,16 @@ table thead td {
 	font-weight: bold;
 }
 
-
 table td {
 	padding: 0.5rem 0.4em;
+}
+.commit-col {
+  padding-right: 0;
+}
+@media only screen and (max-width: 600px) {
+  .commit-col {
+    padding-right: 1em;
+  }
 }
 
 #index tr td:nth-child(2) {
@@ -142,5 +149,11 @@ em {
   font-style: italic;
 }
 .blog {
-  line-height: 1.25;
+  line-height: 1.50;
+}
+
+@media (max-width: 800px) {
+  #projects-table-body {
+    font-size: 0.70em;
+  }
 }
